# slr-platform

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  ROADMAP.md  compose.yaml  pyproject.toml  stage_3_refactor.sh
app/api/: main.py
app/core/: config.py  models.py
app/domain/: __init__.py  author.py  identifiers.py  provenance.py  publication.py  screening.py  search.py  venue.py
app/modules/deduplicate/: service.py
app/modules/importers/: google_scholar.py
app/modules/normalize/: service.py
app/modules/search/providers/: openalex.py
app/providers/: crossref.py  openalex.py  semantic_scholar.py
app/providers/search/: crossref.py  openalex.py  semantic_scholar.py
docker/: Dockerfile
docs/: ARCHITECTURE.md  DECISIONS.md  data-model.md  logging-standard.md  testing-standard.md
docs/adr/: 0001-hybrid-architecture.md  0002-plugin-provider-architecture.md  0003-yaml-project-configuration.md  0004-google-scholar-manual-import.md  0005-provenance-first-data-model.md  0006-no-autonomous-scientific-decisions.md  README.md
docs/schemas/: publication-record.schema.json
projects/lean_energy/: config.yaml
scripts/: check_project.py  deploy_ai_node.sh  dev_start.sh
tests/unit/: test_deduplicate.py  test_normalize.py
tests/unit/domain/: test_author.py  test_identifiers.py  test_phase1_contract.py  test_provenance.py  test_publication.py  test_screening.py  test_search.py  test_venue.py
tests/unit/providers/: test_crossref.py  test_crossref_provenance.py  test_openalex.py  test_semantic_scholar.py  test_semantic_scholar_mapping.py
(+2 files in other folders)
