[project]
name = "slr-platform"
version = "0.1.0"
description = "Modułowa aplikacja wspomagająca systematyczne przeglądy literatury."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "pydantic>=2.11,<3.0",
  "pyyaml>=6.0,<7.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9.0", "ruff>=0.12,<1.0", "mypy>=1.16,<2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
